--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
       <div class="button-container">
 
         <button class="proceed">
-          <p>Proceed to Payment</p>
+          Proceed to Payment
         </button>
         
         <button class="cancel">
-          <p>Cancel Order</p>
+          Cancel Order
         </button>
         
       </div>
